[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.27.0"
openssl = { version = "0.10.56", features = ["v111", "vendored"] }
ratatui = "0.24.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "net", "io-util", "time"] }
tui-textarea = "0.3.1"

